--- a/RandomUE4Stuff/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RandomUE4Stuff/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,7 +83,6 @@ LastExecutedLaunchName=SEAHORSE
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -169,7 +168,9 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/BP_Chao.BP_Chao
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/testanimchao.testanimchao
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -225,26 +226,26 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Chao/ColorTable
-MRUItem1=/Game/ThirdPersonBP/Chao/BPS_Color
-MRUItem2=/Game/ThirdPersonBP/Chao/NewDataTable
-MRUItem3=/Game/ThirdPersonBP/Chao/NewDataAsset
-MRUItem4=/Game/ThirdPersonBP/Chao/NewObjectLibrary
-MRUItem5=/Game/ThirdPersonBP/Chao/BP_Chao
-MRUItem6=/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Belly
-MRUItem7=/Game/ThirdPersonBP/Chao/BPL_ChaoMisc
-MRUItem8=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoColor
-MRUItem9=/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Horns
-MRUItem10=/Game/ThirdPersonBP/Chao/Model/Body/MF_GetAlignmentHornsTexture
-MRUItem11=/Game/ThirdPersonBP/Chao/Model/Body/MF_Child_GetAlignmentBellyTexture
-MRUItem12=/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Body_Mono
-MRUItem13=/Game/ThirdPersonBP/Chao/Model/Body/MF_Child_GetAlignmentBodyTexture
-MRUItem14=/Game/ThirdPersonBP/Chao/Model/Body/MF_Child_LerpTexWithAge
-MRUItem15=/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Horns_Mono
-MRUItem16=/Game/ThirdPersonBP/Chao/Behavior/BT_ChaoMain
-MRUItem17=/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Body
-MRUItem18=/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Belly_Mono
-MRUItem19=/Game/ThirdPersonBP/Chao/Model/Body/MF_Child_GetAlignmentTexture
+MRUItem0=/Game/ThirdPersonBP/Chao/BP_Chao
+MRUItem1=/Game/ThirdPersonBP/Chao/testanimchao
+MRUItem2=/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Body
+MRUItem3=/Game/ThirdPersonBP/Chao/Model/testanimchao
+MRUItem4=/Game/ThirdPersonBP/Chao/Model/Chao3
+MRUItem5=/Game/ThirdPersonBP/Chao/Model/test/Chao2_Anim_Chao_0_animation_002ED9A0
+MRUItem6=/Game/ThirdPersonBP/Chao/Model/test/Chao2_Skeleton
+MRUItem7=/Game/ThirdPersonBP/Chao/ChaoHeadTest
+MRUItem8=/Game/ThirdPersonBP/Chao/Model/Body/ChildBodyNeutral_Young
+MRUItem9=/Game/ThirdPersonBP/Chao/Model/Body/ChildBodyNeutral_Old
+MRUItem10=/Game/ThirdPersonBP/Chao/Model/Body/ChildBodyHero
+MRUItem11=/Game/ThirdPersonBP/Chao/Model/Body/ChildBodyDark
+MRUItem12=/Game/ThirdPersonBP/Chao/ColorTable
+MRUItem13=/Game/ThirdPersonBP/Chao/BPS_Color
+MRUItem14=/Game/ThirdPersonBP/Chao/NewDataTable
+MRUItem15=/Game/ThirdPersonBP/Chao/NewDataAsset
+MRUItem16=/Game/ThirdPersonBP/Chao/NewObjectLibrary
+MRUItem17=/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Belly
+MRUItem18=/Game/ThirdPersonBP/Chao/BPL_ChaoMisc
+MRUItem19=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoColor
 
 [DetailCategories]
 CanvasPanel.Behavior=True
@@ -596,8 +597,8 @@ BP_Chao_C.Tags=False
 BP_Chao_C.ComponentReplication=True
 BP_Chao_C.Cooking=False
 BP_Chao_C.Events=True
-BP_Chao_C.Animation=False
-BP_Chao_C.Mesh=False
+BP_Chao_C.Animation=True
+BP_Chao_C.Mesh=True
 BP_Chao_C.Clothing=False
 BP_Chao_C.MasterPoseComponent=False
 BP_Chao_C.ClothingSimulation=False
@@ -2195,6 +2196,31 @@ PrimaryAssetLabel.Rules=True
 PrimaryAssetLabel.PrimaryAssetLabel=True
 Generic.None=True
 BPS_Color.None=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+REINST_BP_Chao_C_417.Variable=True
+REINST_BP_Chao_C_417.TransformCommon=True
+REINST_BP_Chao_C_417.Sockets=True
+REINST_BP_Chao_C_417.Animation=True
+REINST_BP_Chao_C_417.Mesh=True
+REINST_BP_Chao_C_417.Materials=True
+REINST_BP_Chao_C_417.Clothing=True
+REINST_BP_Chao_C_417.MasterPoseComponent=True
+REINST_BP_Chao_C_417.Physics=True
+REINST_BP_Chao_C_417.Collision=True
+REINST_BP_Chao_C_417.ClothingSimulation=True
+REINST_BP_Chao_C_417.Lighting=True
+REINST_BP_Chao_C_417.Rendering=True
+REINST_BP_Chao_C_417.Tags=True
+REINST_BP_Chao_C_417.ComponentReplication=True
+REINST_BP_Chao_C_417.Activation=True
+REINST_BP_Chao_C_417.Cooking=True
+REINST_BP_Chao_C_417.Events=True
 
 [DetailCategoriesAdvanced]
 RichTextBlock.Appearance=True
@@ -2220,6 +2246,7 @@ AnimSequence.Animation=True
 FbxImportUI.Mesh=True
 SkeletalMesh.SkeletalMesh=True
 K2Node_FunctionEntry.Graph=True
+Texture2D.Texture=True
 
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" "
@@ -2238,13 +2265,13 @@ FontFace="\"Object.FontFace\" "
 WrapBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 CanvasPanel=
 ThirdPersonCharacter_C=
-Character="\"Object.Phenotype\" \"Object.Phenotype\" "
-Pawn="\"Object.Phenotype\" \"Object.Phenotype\" "
-BP_Chao_C="\"Object.Phenotype\" \"Object.Phenotype\" "
+Character=
+Pawn=
+BP_Chao_C=
 BuildGeneticsFromMate=
 CalculateGeneticsFromMating_4="\"Struct.NewLocalVar_1\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-DataAsset=
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 BTT_ChaoMove_C=
 BTTask_BlueprintBase=
 BTTaskNode=
@@ -2361,6 +2388,11 @@ BPS_Color="\"Struct.Color_4_8CCB4DAF44AF272D58A98FA884ECFEEC\" "
 /Game/ThirdPersonBP/Chao/Model/Body/M_Child_Belly.M_Child_Belly=1
 /Game/ThirdPersonBP/Chao/BPS_Color.BPS_Color=1
 /Game/ThirdPersonBP/Chao/ColorTable.ColorTable=1
+/Game/ThirdPersonBP/Chao/Model/Body/ChildBodyDark.ChildBodyDark=1
+/Game/ThirdPersonBP/Chao/Model/Body/ChildBodyHero.ChildBodyHero=1
+/Game/ThirdPersonBP/Chao/Model/Body/ChildBodyNeutral_Old.ChildBodyNeutral_Old=1
+/Game/ThirdPersonBP/Chao/Model/Body/ChildBodyNeutral_Young.ChildBodyNeutral_Young=1
+/Game/ThirdPersonBP/Chao/Model/Body/M_Child_Body.M_Child_Body=1
 
 [PluginBrowser]
 InstalledPlugins=ElectronicNodes
@@ -3064,7 +3096,7 @@ TextureEditor.TimeStamp=2019.10.17-23.40.29
 TextureEditor.LastCompileMethod=Unknown
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -3275,6 +3307,7 @@ LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
 bImportAnimations=True
+bImportMaterials=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3302,7 +3335,7 @@ VertexOverrideColor=(B=0,G=0,R=0,A=0)
 bUseT0AsRefPose=False
 bPreserveSmoothingGroups=True
 bImportMeshesInBoneHierarchy=True
-bImportMorphTargets=False
+bImportMorphTargets=True
 ThresholdPosition=0.000020
 ThresholdTangentNormal=0.000020
 ThresholdUV=0.000977
