Messing around with animation using state machines.

--- a/RandomUE4Stuff/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RandomUE4Stuff/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -232,26 +232,26 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_16
-MRUItem1=/Game/ThirdPersonBP/Chao/Model/ABP_Chao
-MRUItem2=/Game/ThirdPersonBP/Chao/Model/AnimDatabase
-MRUItem3=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_15
-MRUItem4=/Game/ThirdPersonBP/Chao/Model/Animation/ChaoRig_00_Root_015
-MRUItem5=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_39
-MRUItem6=/Game/ThirdPersonBP/Chao/Model/AnimDatabaseRow
-MRUItem7=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_0
-MRUItem8=/Game/ThirdPersonBP/Chao/Model/Animation/ChaoRig_00_Root_000
-MRUItem9=/ChaoAnimationMontager/UW_ChaoAnimationMontager
-MRUItem10=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_116
-MRUItem11=/Game/ThirdPersonBP/Chao/BP_Chao
-MRUItem12=/Game/ThirdPersonBP/Chao/Model/test_notifystate
-MRUItem13=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/aaa
-MRUItem14=/Game/ThirdPersonBP/Chao/Model/Chao_Skeleton
-MRUItem15=/Game/ThirdPersonBP/Chao/Model/Child
-MRUItem16=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_116_2
-MRUItem17=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_123
-MRUItem18=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_621
-MRUItem19=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_98
+MRUItem0=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_48
+MRUItem1=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_114
+MRUItem2=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_115
+MRUItem3=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_117
+MRUItem4=/Game/ThirdPersonBP/Chao/Model/ABP_Chao
+MRUItem5=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_16
+MRUItem6=/Game/ThirdPersonBP/Chao/Model/AnimDatabase
+MRUItem7=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_15
+MRUItem8=/Game/ThirdPersonBP/Chao/Model/Animation/ChaoRig_00_Root_015
+MRUItem9=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_39
+MRUItem10=/Game/ThirdPersonBP/Chao/Model/AnimDatabaseRow
+MRUItem11=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_0
+MRUItem12=/Game/ThirdPersonBP/Chao/Model/Animation/ChaoRig_00_Root_000
+MRUItem13=/ChaoAnimationMontager/UW_ChaoAnimationMontager
+MRUItem14=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_116
+MRUItem15=/Game/ThirdPersonBP/Chao/BP_Chao
+MRUItem16=/Game/ThirdPersonBP/Chao/Model/test_notifystate
+MRUItem17=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/aaa
+MRUItem18=/Game/ThirdPersonBP/Chao/Model/Chao_Skeleton
+MRUItem19=/Game/ThirdPersonBP/Chao/Model/Child
 
 [DetailCategories]
 CanvasPanel.Behavior=True
@@ -2397,7 +2397,7 @@ TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layo
 TextLayoutWidget="\"Object.Appearance.Margin\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 RichTextBlock="\"Object.Appearance.Margin\" "
 RichTextStyleRow="\"Struct.TextStyle\" \"Struct.TextStyle.Font\" "
 TableRowBase="\"Struct.TextStyle\" \"Struct.TextStyle.Font\" "
@@ -2598,12 +2598,13 @@ AnimDatabaseRow=
 /Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_123.final_anim_123=1
 /Game/ThirdPersonBP/Chao/Model/FinalAnimations/aaa.aaa=1
 /Game/ThirdPersonBP/Chao/Model/test_notifystate.test_notifystate=1
+/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_41.final_anim_41=1
 
 [PluginBrowser]
 InstalledPlugins=ElectronicNodes
 
 [RootWindow]
-ScreenPosition=X=1703.000 Y=0.000
+ScreenPosition=X=103.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
