--- a/RandomUE4Stuff/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RandomUE4Stuff/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -170,13 +170,21 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Chao/Behavior
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Chao/Enums
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Model/ABP_Chao.ABP_Chao
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoYawn.BTT_ChaoYawn
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BT_ChaoMain.BT_ChaoMain
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BB_ChaoMain.BB_ChaoMain
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_0.final_anim_0
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoBehaviorBase.BTT_ChaoBehaviorBase
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/BP_Chao.BP_Chao
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoEyeType.BPE_ChaoEyeType
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -232,26 +240,26 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoYawn
-MRUItem1=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoBehavior
-MRUItem2=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_18
-MRUItem3=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_17
-MRUItem4=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_13
-MRUItem5=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_41
-MRUItem6=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_16
-MRUItem7=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_15
-MRUItem8=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_84
-MRUItem9=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_40
-MRUItem10=/Game/ThirdPersonBP/Chao/Model/ABP_Chao
-MRUItem11=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_48
-MRUItem12=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_114
-MRUItem13=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_115
-MRUItem14=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_117
-MRUItem15=/Game/ThirdPersonBP/Chao/Model/AnimDatabase
-MRUItem16=/Game/ThirdPersonBP/Chao/Model/Animation/ChaoRig_00_Root_015
-MRUItem17=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_39
-MRUItem18=/Game/ThirdPersonBP/Chao/Model/AnimDatabaseRow
-MRUItem19=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_0
+MRUItem0=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoEyeType
+MRUItem1=/Game/ThirdPersonBP/Chao/BP_Chao
+MRUItem2=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoBehaviorBase
+MRUItem3=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_39
+MRUItem4=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_41
+MRUItem5=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_84
+MRUItem6=/Game/ThirdPersonBP/Chao/Behavior/BT_ChaoMain
+MRUItem7=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoYawn
+MRUItem8=/Game/ThirdPersonBP/Chao/Model/ABP_Chao
+MRUItem9=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoBehavior
+MRUItem10=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_18
+MRUItem11=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_17
+MRUItem12=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_13
+MRUItem13=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_16
+MRUItem14=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_15
+MRUItem15=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_40
+MRUItem16=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_48
+MRUItem17=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_114
+MRUItem18=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_115
+MRUItem19=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_117
 
 [DetailCategories]
 CanvasPanel.Behavior=True
@@ -873,7 +881,7 @@ BTT_ChaoSLPDPTH_C.Description=True
 BTT_ChaoSLPDPTH_C.Task=True
 BTT_ChaoSleepDepth_C.Description=True
 BTT_ChaoSleepDepth_C.Task=True
-BP_Chao_C.Life=False
+BP_Chao_C.Life=True
 CryptoKeysSettings.Encryption=True
 CryptoKeysSettings.Signing=True
 GeneralProjectSettings.About=True
@@ -2366,6 +2374,8 @@ AnimGraphNode_BlendListByEnum.Config=True
 AnimGraphNode_BlendListByEnum.BlendType=True
 AnimGraphNode_BlendListByEnum.Option=True
 BTT_ChaoYawn_C.Default=True
+BTT_ChaoBehaviorBase_C.Default=True
+StaticMeshActor.VirtualTexture=True
 
 [DetailCategoriesAdvanced]
 RichTextBlock.Appearance=True
@@ -2415,9 +2425,9 @@ FontFace="\"Object.FontFace\" "
 WrapBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 CanvasPanel=
 ThirdPersonCharacter_C=
-Character=
-Pawn=
-BP_Chao_C=
+Character="\"Object.Life.Feelings\" "
+Pawn="\"Object.Life.Feelings\" "
+BP_Chao_C="\"Object.Life.Feelings\" "
 BuildGeneticsFromMate=
 CalculateGeneticsFromMating_4="\"Struct.NewLocalVar_1\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2480,12 +2490,12 @@ AnimMontage="\"Object.BlendOption.BlendIn\" \"Object.Animation.AssetUserData\" \
 AnimCompositeBase="\"Object.BlendOption.BlendIn\" \"Object.Animation.AssetUserData\" \"Object.MetaData.MetaData\" "
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
-AnimGraphNode_Base=
-K2Node=
+AnimGraphNode_Base="\"Object.Settings.SyncGroup\" "
+K2Node="\"Object.Settings.SyncGroup\" "
 EdGraphNode=
 AnimDatabaseRow=
-ABP_Chao_C="\"Object.RandomFloats\" \"Object.RandomFloats\" "
-AnimInstance="\"Object.RandomFloats\" \"Object.RandomFloats\" "
+ABP_Chao_C=
+AnimInstance=
 
 [AssetEditorToolkitTabLocation]
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
@@ -2614,7 +2624,7 @@ AnimInstance="\"Object.RandomFloats\" \"Object.RandomFloats\" "
 InstalledPlugins=ElectronicNodes
 
 [RootWindow]
-ScreenPosition=X=1703.000 Y=0.000
+ScreenPosition=X=103.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -3408,7 +3418,7 @@ CalculateInheritedLifespan_7=ArrayProperty.DefaultValueCategory.None,StructPrope
 CalculateInheritedRank_9=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 CalculateRankPhenotypes_8=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 CalculateRankPhenotypes=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
-BTT_ChaoBehaviorBase_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
+BTT_ChaoBehaviorBase_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 DecideIfPerformingBehavior_1=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 DecideIfPerformingBehavior=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 NewFunction_1=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
@@ -3445,7 +3455,7 @@ BTT_ChaoYawn_C=
 Character=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 ABP_Chao_C=
 InitState_4=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
-InitState=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
+InitState=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 AnimateEyes=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 AnimateEyes_37=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 AnimateMouth=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
@@ -3735,9 +3745,6 @@ bPreloadEngineModules=False
 bPreloadEnginePluginModules=False
 bPreloadProjectModules=True
 bPreloadProjectPluginModules=True
-
-[/Script/Blutility.EditorUtilitySubsystem]
-LoadedUIs=/ChaoAnimationMontager/UW_ChaoAnimationMontager.UW_ChaoAnimationMontager
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
