Implemented the Thinking state and made Yawning and Thinking pretty.

--- a/RandomUE4Stuff/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RandomUE4Stuff/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -178,13 +178,14 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Model/ABP_Chao.ABP_Chao
-OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoYawn.BTT_ChaoYawn
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoBehavior.BPE_ChaoBehavior
 OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BT_ChaoMain.BT_ChaoMain
 OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BB_ChaoMain.BB_ChaoMain
-OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_0.final_anim_0
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoThink.BTT_ChaoThink
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoYawn.BTT_ChaoYawn
 OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoBehaviorBase.BTT_ChaoBehaviorBase
-OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/BP_Chao.BP_Chao
-OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoEyeType.BPE_ChaoEyeType
+OpenAssetsAtExit=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_41.final_anim_41
+SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -240,26 +241,26 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoEyeType
-MRUItem1=/Game/ThirdPersonBP/Chao/BP_Chao
-MRUItem2=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoBehaviorBase
-MRUItem3=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_39
-MRUItem4=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_41
-MRUItem5=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_84
-MRUItem6=/Game/ThirdPersonBP/Chao/Behavior/BT_ChaoMain
-MRUItem7=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoYawn
-MRUItem8=/Game/ThirdPersonBP/Chao/Model/ABP_Chao
-MRUItem9=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoBehavior
-MRUItem10=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_18
-MRUItem11=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_17
-MRUItem12=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_13
-MRUItem13=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_16
-MRUItem14=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_15
-MRUItem15=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_40
-MRUItem16=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_48
-MRUItem17=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_114
-MRUItem18=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_115
-MRUItem19=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_117
+MRUItem0=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_41
+MRUItem1=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_84
+MRUItem2=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_3
+MRUItem3=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_239
+MRUItem4=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_240
+MRUItem5=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_0
+MRUItem6=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_241
+MRUItem7=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_1
+MRUItem8=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_40
+MRUItem9=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoBehaviorBase
+MRUItem10=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoYawn
+MRUItem11=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoBehaviorBase_New
+MRUItem12=/Game/ThirdPersonBP/Chao/Behavior/BT_ChaoMain
+MRUItem13=/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoThink
+MRUItem14=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_242
+MRUItem15=/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_62
+MRUItem16=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoBehavior
+MRUItem17=/Game/ThirdPersonBP/Chao/Model/ABP_Chao
+MRUItem18=/Game/ThirdPersonBP/Chao/Enums/BPE_ChaoEyeType
+MRUItem19=/Game/ThirdPersonBP/Chao/BP_Chao
 
 [DetailCategories]
 CanvasPanel.Behavior=True
@@ -2376,6 +2377,10 @@ AnimGraphNode_BlendListByEnum.Option=True
 BTT_ChaoYawn_C.Default=True
 BTT_ChaoBehaviorBase_C.Default=True
 StaticMeshActor.VirtualTexture=True
+BTT_ChaoBehaviorBase_New_C.Default=True
+BTT_ChaoThink_C.Default=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
 
 [DetailCategoriesAdvanced]
 RichTextBlock.Appearance=True
@@ -2413,7 +2418,7 @@ TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layo
 TextLayoutWidget="\"Object.Appearance.Margin\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 RichTextBlock="\"Object.Appearance.Margin\" "
 RichTextStyleRow="\"Struct.TextStyle\" \"Struct.TextStyle.Font\" "
 TableRowBase="\"Struct.TextStyle\" \"Struct.TextStyle.Font\" "
@@ -2619,12 +2624,14 @@ AnimInstance=
 /Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_41.final_anim_41=1
 /Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_18.final_anim_18=1
 /Game/ThirdPersonBP/Chao/Enums/BPE_ChaoBehavior.BPE_ChaoBehavior=1
+/Game/ThirdPersonBP/Chao/Model/FinalAnimations/final_anim_240.final_anim_240=1
+/Game/ThirdPersonBP/Chao/Behavior/BTT_ChaoThink.BTT_ChaoThink=1
 
 [PluginBrowser]
 InstalledPlugins=ElectronicNodes
 
 [RootWindow]
-ScreenPosition=X=103.000 Y=0.000
+ScreenPosition=X=1703.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -3385,7 +3392,7 @@ MulticastDelegateProperty=ArrayProperty.DefaultValueCategory.None,
 BP_SongSpot_C=ArrayProperty.DefaultValueCategory.None,
 BP_Chao_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 ObjectProperty=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
-StructProperty=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
+StructProperty=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 StrProperty=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 BuildGeneticsFromMate=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
@@ -3407,7 +3414,7 @@ BTTask_BlueprintBase_New_C=ArrayProperty.DefaultValueCategory.None,StructPropert
 BTT_ChaoMove_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 FloatProperty=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 BP_Chao_old_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
-BTT_ChaoThink_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+BTT_ChaoThink_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 MapProperty=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 SetProperty=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 UserDefinedStruct=UserDefinedStruct.DefaultValues.None,
@@ -3418,7 +3425,7 @@ CalculateInheritedLifespan_7=ArrayProperty.DefaultValueCategory.None,StructPrope
 CalculateInheritedRank_9=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 CalculateRankPhenotypes_8=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 CalculateRankPhenotypes=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
-BTT_ChaoBehaviorBase_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+BTT_ChaoBehaviorBase_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 DecideIfPerformingBehavior_1=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 DecideIfPerformingBehavior=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 NewFunction_1=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
@@ -3453,7 +3460,7 @@ ModifyPersonalityTrait_30=ArrayProperty.DefaultValueCategory.None,StructProperty
 BTT_ChaoSleepDepth_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 BTT_ChaoYawn_C=
 Character=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
-ABP_Chao_C=
+ABP_Chao_C=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 InitState_4=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 InitState=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 AnimateEyes=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
@@ -3549,6 +3556,7 @@ DatasmithAssetUserData=ArrayProperty.DefaultValueCategory.None,StructProperty.De
 Transition_5=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,
 Transition=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 EnumProperty=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+InitState_2=ArrayProperty.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,MapProperty.DefaultValueCategory.None,SetProperty.DefaultValueCategory.None,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPersonBP/Chao/BP_Chao.BP_Chao;
